--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -2,15 +2,15 @@
   <ion-header-bar>
     <h1 class="title">Login</h1>
     <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
+
     </div>
   </ion-header-bar>
   <ion-content>
     <form ng-submit="doLogin()">
       <div class="list">
         <label class="item item-input">
-          <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
+          <span class="input-label">E-mail</span>
+          <input type="email" ng-model="loginData.email">
         </label>
         <label class="item item-input">
           <span class="input-label">Password</span>
