#109289932 Changed the acceptable characters in the local part and domain part of email in email field

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -13,7 +13,7 @@
           name="email"
           ng-model="loginData.email"
           ng-minlength="6"
-          ng-pattern="/\S+@\S+\.\S+/"
+          ng-pattern="/^[_a-z0-9-]+(\.[_a-z0-9-]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/"
           required>
         </label>
 
