#109295892 I added a card with a header to the tournament view.

--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -1,4 +1,18 @@
 <ion-view view-title="Tournament feed">
     <ion-content>
+        <ion-card>
+                <div class="card">
+                    <ion-card-header>
+                        <div class="item item-divider">
+                            Card header
+                        </div>
+                    </ion-card-header>
+                    <ion-card-content>
+                        <div class="item item-text-wrap">
+                            This is a sample card.
+                        </div>
+                    </ion-card-content>
+                </div>
+        </ion-card>
     </ion-content>
 </ion-view>
