--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -4,7 +4,7 @@
                 <div class="card">
                     <ion-card-header>
                         <div class="item item-divider">
-                            Card header
+                            Card header.
                         </div>
                     </ion-card-header>
                     <ion-card-content>
