#109295892 I added a card with a header to tournament view.

--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -4,7 +4,7 @@
                 <div class="card">
                     <ion-card-header>
                         <div class="item item-divider">
-                            Card header.
+                            Sample header.
                         </div>
                     </ion-card-header>
                     <ion-card-content>
