#109295892 I added a card with a header to tournament view.

--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -9,7 +9,7 @@
                     </ion-card-header>
                     <ion-card-content>
                         <div class="item item-text-wrap">
-                            This is a sample card.
+                            This is a Sample Card.
                         </div>
                     </ion-card-content>
                 </div>
