#113479175 user can now see Description from API on tournament feed cards

--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -9,9 +9,7 @@
                     </ion-card-header>
                     <ion-card-content>
                         <div class="item item-text-wrap">
-<!-- Fetching description from API not working properly yet
-                            <p>{{ card.description }}</p> -->
-                            <p>Here comes the description.</p>
+                            <p>{{ card.description }}</p>
                         </div>
                     </ion-card-content>
                 </div>
