#109291032 added login with back-end

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -38,7 +38,7 @@
 
         <label class="item">
           <button class="button button-block button-positive" type="submit"
-                  ng-disabled="loginForm.$invalid">Log in</button>
+                  ng-disabled="loginForm.$invalid || isSubmitted" >Log in</button>
         </label>
       </div>
     </form>
