Made the card info pollable in a way that loads itself on start before starting to poll on an interval. Also added some start material to the HTML to make the card swipable(testing code on the function commented out)

--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Tournament feed">
     <ion-content>
         <ion-card>
-                <div class="card" ng-repeat="card in cards">
+                <div class="card" ng-repeat="card in cards" on-swipe-left = "onSwipeLeft()">
                     <ion-card-header>
                         <div class="item item-divider">
                             <p>{{ card.title }}</p>
