#113479321 User can now see card creation date on the right-hand corner in the card

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -25,3 +25,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 @import "blocks/forms";
 
+// CSS for creation date on card
+.creation-date {
+    float:right;
+}
