--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Tournament feed">
     <ion-content>
         <ion-card>
-                <div class="card" ng-repeat="card in cards" on-swipe-left = "onSwipeLeft()">
+                <div class="card" ng-repeat="card in cards | orderBy: '-created'" on-swipe-left = "onSwipeLeft()">
                     <ion-card-header>
                         <div class="item item-divider">
                             <p>{{ card.title }}</p>
