--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -1,23 +1,27 @@
 <ion-view view-title="Tournament feed">
     <ion-content>
-        <ion-card>
-                <div class="card" ng-repeat="card in cards | orderBy: '-created'" on-swipe-left = "onSwipeLeft()">
-                    <ion-card-header>
-                        <div class="item item-divider">
-                            <p>{{ card.title }}</p>
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
+        </ion-refresher>
+        <ion-list show-delete="shouldShowDelete" type="card" can-swipe ="true">
+            <ion-item ng-repeat="card in cards | orderBy: '-created'">
+                <ion-item class="item-complex">
+                    <ion-item class="item-complex">
+                        <p>{{ card.title }}</p>
+                    </ion-item>
+                </ion-item class="item-complex">
+                <ion-item class="item-complex">
+                    <ion-item class="item-text-wrap">
+                        <p>{{ card.description }}</p>
+                    </ion-item>
+                    <ion-item class="item item-divider">
+                        <div class="creation-date">
+                            <p>{{ card.created | date:'dd MMMM, HH:mm' }}</p>
                         </div>
-                    </ion-card-header>
-                    <ion-card-content>
-                        <div class="item item-text-wrap">
-                            <p>{{ card.description }}</p>
-                        </div>
-                        <div class="item item-divider">
-                            <div class="creation-date">
-                                <p>{{ card.created | date:'dd MMMM, HH:mm' }}</p>
-                            </div>
-                        </div>
-                    </ion-card-content>
-                </div>
-        </ion-card>
+                    </ion-item>
+                </ion-item>
+                <ion-option-button class="button-assertive" ng-click="destroyCard($index)">DELETE
+                </ion-option-button>
+            </ion-item>
+        </ion-list>
     </ion-content>
 </ion-view>
