--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -1,8 +1,29 @@
 <ion-view view-title="Tournament feed">
     <ion-content>
-        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
-        </ion-refresher>
-        <ion-list show-delete="shouldShowDelete" type="card" can-swipe ="true">
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
+        <ion-list show-delete="shouldShowDelete" type="card" can-swipe="true">
+            <ion-item ng-repeat="timercard in timercards | orderBy: '-created'">
+                <ion-item class="item-complex">
+                    <ion-item class="item-complex">
+                        <p>{{ timercard.title }}</p>
+                    </ion-item>
+                </ion-item class="item-complex">
+                <ion-item class="item-complex">
+                    <ion-item class="item-text-wrap">
+                        <p>{{ timercard.description }}
+                            <timer end-time="endDate">{{hours}} hours, {{minutes}} minutes, {{seconds}} seconds.</timer>
+                        </p>
+                    </ion-item>
+                    <ion-item class="item item-divider">
+                        <div class="creation-date">
+                            <p>{{ timercard.created | date:'dd MMMM, HH:mm' }}</p>
+                        </div>
+                    </ion-item>
+                </ion-item>
+                <ion-option-button class="button-assertive" ng-click="destroyCard($index)">DELETE
+                </ion-option-button>
+            </ion-item>
+
             <ion-item ng-repeat="card in cards | orderBy: '-created'">
                 <ion-item class="item-complex">
                     <ion-item class="item-complex">
@@ -22,6 +43,7 @@
                 <ion-option-button class="button-assertive" ng-click="destroyCard($index)">DELETE
                 </ion-option-button>
             </ion-item>
+
         </ion-list>
     </ion-content>
 </ion-view>
