--- a/www/templates/tournamentFeed.html
+++ b/www/templates/tournamentFeed.html
@@ -3,11 +3,11 @@
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
         <ion-list show-delete="shouldShowDelete" type="card" can-swipe="true">
             <ion-item ng-repeat="timercard in timercards | orderBy: '-created'">
-                <ion-item class="item-complex">
-                    <ion-item class="item-complex">
-                        <p>{{ timercard.title }}</p>
-                    </ion-item>
-                </ion-item class="item-complex">
+                <ion-item class="item item-avatar">
+                    <img src="http://images.clipartpanda.com/alarm-clock-png-orologio_clock_alarm_icon-1331px.png">
+                    <h2>{{ timercard.title }}</h2>
+                    <p>Pls do what I say</p>
+                </ion-item>
                 <ion-item class="item-complex">
                     <ion-item class="item-text-wrap">
                         <p>{{ timercard.description }}
@@ -20,16 +20,19 @@
                         </div>
                     </ion-item>
                 </ion-item>
-                <ion-option-button class="button-assertive" ng-click="destroyCard($index)">DELETE
+                <ion-option-button class="button-assertive" ng-click="destroyCard($index)">
+                    DELETE
                 </ion-option-button>
             </ion-item>
+        </ion-list>
 
+        <ion-list show-delete="shouldShowDelete" type="card" can-swipe="true">
             <ion-item ng-repeat="card in cards | orderBy: '-created'">
-                <ion-item class="item-complex">
-                    <ion-item class="item-complex">
-                        <p>{{ card.title }}</p>
-                    </ion-item>
-                </ion-item class="item-complex">
+                <ion-item class="item item-avatar">
+                    <img src="http://cliparts.co/cliparts/6ir/yy6/6iryy64iK.png">
+                    <h2>{{ card.title }}</h2>
+                    <p>Tere hommikust</p>
+                </ion-item>
                 <ion-item class="item-complex">
                     <ion-item class="item-text-wrap">
                         <p>{{ card.description }}</p>
@@ -40,10 +43,10 @@
                         </div>
                     </ion-item>
                 </ion-item>
-                <ion-option-button class="button-assertive" ng-click="destroyCard($index)">DELETE
+                <ion-option-button class="button-assertive" ng-click="destroyCard($index)">
+                    DELETE
                 </ion-option-button>
             </ion-item>
-
         </ion-list>
     </ion-content>
 </ion-view>
