--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,16 @@
 /* Empty. Add your own CSS if you like */
+
+.item .item-content {
+  padding: 0 !important;
+}
+
+/*
+.item-content {
+    padding-right: 16px !important;
+}*/
+
+.time-alert {
+    background-color: rgba(255, 26, 26, 0.1);
+}
+
+
