#113479835 user can now see card title in detail view

--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -1,5 +1,15 @@
 <ion-view view-title="Card detail view">
-    <ion-content>       
+    <ion-content>
+        <div class="list card">
 
+            <div class="item item-avatar">
+                <h2>{{ title }}</h2>
+            </div>
+
+            <div class="item item-body">
+
+            </div>
+
+        </div>
     </ion-content>
 </ion-view>
