#113479833 User can now see excerpt of card description in tournament feed and full description on according card's detail view

--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -3,11 +3,11 @@
         <div class="list card">
 
             <div class="item item-avatar">
-                <h2>{{ title }}</h2>
+                <h2>{{ card.title }}</h2>
             </div>
 
             <div class="item item-body">
-
+                <p>{{ card.description }}</p>
             </div>
 
         </div>
