#113479831 card creation date is now seen in detail view

--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -8,6 +8,8 @@
 
             <div class="item item-body">
                 <p>{{ card.description }}</p>
+
+                <p>{{ card.created | date:'dd MMMM, HH:mm' }}</p>
             </div>
 
         </div>
