#113479829 Thumbnail now also in detail view. Random image taken from web, since there is no real image at the moment.

--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -3,6 +3,7 @@
         <div class="list card">
 
             <div class="item item-avatar">
+                <img src="http://cliparts.co/cliparts/6ir/yy6/6iryy64iK.png">
                 <h2>{{ card.title }}</h2>
             </div>
 
