--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -3,7 +3,7 @@
         <div class="list card">
 
             <div class="item item-avatar">
-                <img src="http://cliparts.co/cliparts/6ir/yy6/6iryy64iK.png">
+                <img src="http://logonoid.com/images/thumbs/nike-logo.png">
                 <h2>{{ card.title }}</h2>
             </div>
 
