--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -12,14 +12,23 @@
     <ion-nav-view name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
-  <ion-side-menu side="left">
+  <ion-side-menu side="left" class="side-menu">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
         <ion-item menu-close href="#/app/tournamentFeed">
           Tournament Feed
+        </ion-item>
+        <ion-item menu-close href="#">
+          Map
+        </ion-item>
+        <ion-item menu-close href="#">
+          Contacts
+        </ion-item>
+        <ion-item menu-close href="#">
+          Calendar
         </ion-item>
       </ion-list>
     </ion-content>
