--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,4 +1,3 @@
-
 .item a {
     text-decoration: none;
 }
@@ -21,7 +20,7 @@
 }
 
 .feed-card {
-    margin-top: 10px;
+    margin-top: 5px;
     margin-right: 1px;
 }
 
@@ -41,6 +40,10 @@
 
 .item.feed-card .item-content h2 {
     color: rgba(255, 255, 255, 0.9);
+}
+
+.item.feed-card .item-avatar-left img {
+/* TO-DO center the card thumbnail image*/
 }
 
 
@@ -71,6 +74,10 @@
     border-color: rgba(0, 0, 0, 0.1);
 }
 
+.side-menu .item-content.activated {
+    background: rgba(102, 0, 102, 1);
+}
+
 
 /* HEADER NAV-BAR CSS */
 
@@ -90,10 +97,14 @@
 .ion-ios-arrow-back {
     color: rgba(255, 255, 255, 0.9);
 }
+.ion-android-arrow-back {
+    color: rgba(255, 255, 255, 0.9);
+}
 
 .ion-navicon {
     color: rgba(255, 255, 255, 0.9) !important;
 }
+
 
 /* BACKGROUND CSS */
 
