--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9747,5 +9747,29 @@ label.item.has-error {
   overflow: hidden;
   text-align: right; }
 
-.creation-date {
-  float: right; }
+#login {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+  #login .item.item-input {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-color: rgba(0, 0, 0, 0.1); }
+  #login .input-label {
+    color: rgba(255, 255, 255, 0.5); }
+  #login .scroll-content {
+    display: table !important;
+    width: 100% !important;
+    height: 100% !important; }
+    #login .scroll-content form {
+      display: table-cell;
+      vertical-align: middle; }
+      #login .scroll-content form .header {
+        padding-bottom: 20px; }
+        #login .scroll-content form .header img {
+          display: block;
+          width: 80%;
+          margin: 0 auto; }
+      #login .scroll-content form .button.button-light.active, #login .scroll-content form .button.button-light.activated {
+        color: #fff;
+        opacity: inherit; }
