--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,13 +1,15 @@
-<ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title">Login</h1>
-  </ion-header-bar>
-  <ion-content>
-    <form ng-submit="doLogin()" name="loginForm" novalidate>
-      <div class="list">
+<ion-modal-view hide-nav-bar="true" id="login">
 
-        <label class="item item-input"
-          ng-class="{ 'has-error' : loginForm.email.$invalid && loginForm.email.$touched}">
+  <ion-content padding="true" scroll="false">
+    <form ng-submit="doLogin()" name="loginForm" novalidate>
+      <div class="row responsive-md">
+
+        <div class="header padding text-center">
+          <img src="img/logo.png" alt="EUDC2017 logo" />
+        </div>
+
+        <div class="list">
+          <label class="item item-input" ng-class="{ 'has-error' : loginForm.email.$invalid && loginForm.email.$touched}">
         <span class="input-label">E-mail</span>
         <input type="email"
           name="email"
@@ -17,12 +19,11 @@
           required>
         </label>
 
-        <div class="form-errors" ng-messages="loginForm.email.$error" ng-if="loginForm.email.$touched">
-          <div class="form-error" ng-message="minlength required pattern">Please enter a valid email address.</div>
-        </div>
+          <div class="form-errors" ng-messages="loginForm.email.$error" ng-if="loginForm.email.$touched">
+            <div class="form-error" ng-message="minlength required pattern">Please enter a valid email address.</div>
+          </div>
 
-        <label class="item item-input"
-          ng-class="{ 'has-error' : loginForm.password.$invalid && loginForm.password.$touched}">
+          <label class="item item-input" ng-class="{ 'has-error' : loginForm.password.$invalid && loginForm.password.$touched}">
         <span class="input-label">Password</span>
         <input type="password"
           name="password"
@@ -30,17 +31,17 @@
           ng-minlength="6"
           required>
         </label>
+        </div>
 
         <div class="form-errors" ng-messages="loginForm.password.$error" ng-if="loginForm.password.$touched">
           <div class="form-error" ng-message="minlength">Password has to consist of at least 6 characters.</div>
           <div class="form-error" ng-message="required">Please enter your password.</div>
         </div>
 
-        <label class="item">
-          <button class="button button-block button-positive" type="submit"
-                  ng-disabled="loginForm.$invalid || isSubmitted" >Log in</button>
-        </label>
-      </div>
+        <button class="button button-block button-royal" type="submit" ng-disabled="loginForm.$invalid || isSubmitted">
+             Log In
+        </button>
     </form>
+    </div>
   </ion-content>
 </ion-modal-view>
