--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -15,55 +15,126 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
+$purpleblue: #2f158a !default;
+
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
-
-// Include all of Ionic
-@import "../www/lib/ionic/scss/ionic";
-
+// Include Google font
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,700,300);
+$font-family-base: "Open Sans", sans-serif !default;
 
 @import "blocks/forms";
 
-#login {
-    
-  .item.item-input {
-      background-color: rgba(0, 0, 0, 0.2);
-      border-color: rgba(0, 0, 0, 0.1);
+@media (min-width: 680px) {
+  .modal {
+      top: 0 !important;
+      right: 0 !important;
+      bottom: 0 !important;
+      left: 0 !important;
+      min-height: 240px;
+      width: 100%;
   }
-  
-  .input-label {
-      color: rgba(255, 255, 255, 0.5);
+
+  .row {
+      display: block !important;
   }
-  
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+}
+
+.form-errors {
+  height: auto;
+}
+
+.login {
+  background-position: center;
   background-size: cover;
+  background-image: url('/img/eudc2017-bg.jpg');
+  width: 100vw !important;
+  height: 100vh !important;
 
   .scroll-content {
-    display: table !important;
-    width: 100% !important;
-    height: 100% !important;
+    background: linear-gradient(45deg, rgba(212, 11, 82, 0.5) 0%, rgba(0, 27, 255, 1) 100%);
+    display: flex;
+    align-items: center;
 
     form {
-      display: table-cell;
-      vertical-align: middle;
+      margin: 0 auto;
 
-      .header {
-        padding-bottom: 20px;
+      >.row {
+        padding-left: 45px;
+        padding-right: 45px;
 
-        img {
-          display: block;
-          width: 80%;
-          margin: 0 auto;
+        .header {
+          padding-bottom: 20px;
+
+          img {
+            width: 100%;
+            max-width: 300px;
+            margin: 0 auto;
+          }
+        }
+
+        .button {
+          background: transparent;
+          border: 1px solid white;
+
+          &:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+          }
+          &:focus {
+
+          }
         }
       }
+    }
+  }
 
-      .button.button-light.active, .button.button-light.activated {
-        color: #fff;
-        opacity: inherit;
+  .login-input {
+    >label {
+      background-color: transparent;
+      margin-bottom: 10px;
+      border: none;
+      padding-left: 5px;
+      >.input-label {
+        color: white;
+        width: 10%;
+        font-size: 20px;
+        padding-top: 7.5px;
+      }
+      input[type='email'], input[type='password'] {
+        color: white;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        padding-left: 5px;
+
+        &:focus {
+          border-bottom: 1px solid rgba(255, 255, 255, 0.4);
+        }
       }
     }
   }
 }
+
+.button {
+  border-radius: 0 !important;
+}
+
+.popup-container {
+  .popup {
+    width: 400px !important;
+    padding: 20px;
+
+    .button {
+      background-color: $purpleblue;
+
+      &:hover {
+        background-color: darken($purpleblue, 2.5%);
+      }
+      &:focus {
+        background-color: darken($purpleblue, 5%);
+      }
+    }
+  }
+}
+
+// Include all of Ionic
+@import "../www/lib/ionic/scss/ionic";
