--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -15,6 +15,93 @@ $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,700,300);
+.form-errors {
+  -webkit-transition: height 0.4s ease;
+  transition: height 0.4s ease;
+  height: 0; }
+
+label.item.has-error {
+  border-bottom: 2px solid red; }
+  label.item.has-error + .form-errors {
+    height: 25px; }
+
+.form-error {
+  padding: 2px 5px 2px 16px;
+  color: red;
+  overflow: hidden;
+  text-align: right; }
+
+@media (min-width: 680px) {
+  .modal {
+    top: 0 !important;
+    right: 0 !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    min-height: 240px;
+    width: 100%; }
+  .row {
+    display: block !important; } }
+
+.form-errors {
+  height: auto; }
+
+.login {
+  background-position: center;
+  background-size: cover;
+  background-image: url("/img/eudc2017-bg.jpg");
+  width: 100vw !important;
+  height: 100vh !important; }
+  .login .scroll-content {
+    background: linear-gradient(45deg, rgba(212, 11, 82, 0.5) 0%, #001bff 100%);
+    display: flex;
+    align-items: center; }
+    .login .scroll-content form {
+      margin: 0 auto; }
+      .login .scroll-content form > .row {
+        padding-left: 45px;
+        padding-right: 45px; }
+        .login .scroll-content form > .row .header {
+          padding-bottom: 20px; }
+          .login .scroll-content form > .row .header img {
+            width: 100%;
+            max-width: 300px;
+            margin: 0 auto; }
+        .login .scroll-content form > .row .button {
+          background: transparent;
+          border: 1px solid white; }
+          .login .scroll-content form > .row .button:hover {
+            background-color: rgba(255, 255, 255, 0.1); }
+  .login .login-input > label {
+    background-color: transparent;
+    margin-bottom: 10px;
+    border: none;
+    padding-left: 5px; }
+    .login .login-input > label > .input-label {
+      color: white;
+      width: 10%;
+      font-size: 20px;
+      padding-top: 7.5px; }
+    .login .login-input > label input[type='email'], .login .login-input > label input[type='password'] {
+      color: white;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      padding-left: 5px; }
+      .login .login-input > label input[type='email']:focus, .login .login-input > label input[type='password']:focus {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.4); }
+
+.button {
+  border-radius: 0 !important; }
+
+.popup-container .popup {
+  width: 400px !important;
+  padding: 20px; }
+  .popup-container .popup .button {
+    background-color: #2f158a; }
+    .popup-container .popup .button:hover {
+      background-color: #2b137f; }
+    .popup-container .popup .button:focus {
+      background-color: #271274; }
+
 /*!
   Ionicons, v2.0.1
   Created by Ben Sperry for the Ionic Framework, http://ionicons.com/
@@ -3339,7 +3426,7 @@ body,
   word-wrap: break-word;
   font-size: 14px;
   font-family: -apple-system;
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "Open Sans", sans-serif;
   line-height: 20px;
   text-rendering: optimizeLegibility;
   -webkit-backface-visibility: hidden;
@@ -3597,7 +3684,7 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   color: #000;
   font-weight: 500;
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif;
+  font-family: "Open Sans", sans-serif;
   line-height: 1.2; }
   h1 small, h2 small, h3 small, h4 small, h5 small, h6 small,
   .h1 small, .h2 small, .h3 small, .h4 small, .h5 small, .h6 small {
@@ -7494,7 +7581,7 @@ input,
 button,
 select,
 textarea {
-  font-family: "-apple-system", "Helvetica Neue", "Roboto", "Segoe UI", sans-serif; }
+  font-family: "Open Sans", sans-serif; }
 
 .item-input {
   display: -webkit-box;
@@ -9730,46 +9817,3 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
-
-.form-errors {
-  -webkit-transition: height 0.4s ease;
-  transition: height 0.4s ease;
-  height: 0; }
-
-label.item.has-error {
-  border-bottom: 2px solid red; }
-  label.item.has-error + .form-errors {
-    height: 25px; }
-
-.form-error {
-  padding: 2px 5px 2px 16px;
-  color: red;
-  overflow: hidden;
-  text-align: right; }
-
-#login {
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
-  #login .item.item-input {
-    background-color: rgba(0, 0, 0, 0.2);
-    border-color: rgba(0, 0, 0, 0.1); }
-  #login .input-label {
-    color: rgba(255, 255, 255, 0.5); }
-  #login .scroll-content {
-    display: table !important;
-    width: 100% !important;
-    height: 100% !important; }
-    #login .scroll-content form {
-      display: table-cell;
-      vertical-align: middle; }
-      #login .scroll-content form .header {
-        padding-bottom: 20px; }
-        #login .scroll-content form .header img {
-          display: block;
-          width: 80%;
-          margin: 0 auto; }
-      #login .scroll-content form .button.button-light.active, #login .scroll-content form .button.button-light.activated {
-        color: #fff;
-        opacity: inherit; }
