--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,36 +1,38 @@
-<ion-modal-view hide-nav-bar="true" id="login">
+<ion-modal-view hide-nav-bar="true" class="login" id="login">
 
   <ion-content padding="true" scroll="false">
     <form ng-submit="doLogin()" name="loginForm" novalidate>
       <div class="row responsive-md">
 
         <div class="header padding text-center">
-          <img src="img/logo.png" alt="EUDC2017 logo" />
+          <img src="img/eudc2017-logo.png" alt="EUDC2017 logo" />
         </div>
 
-        <div class="list">
-          <label class="item item-input" ng-class="{ 'has-error' : loginForm.email.$invalid && loginForm.email.$touched}">
-        <span class="input-label">E-mail</span>
-        <input type="email"
-          name="email"
-          ng-model="loginData.email"
-          ng-minlength="6"
-          ng-pattern="/^[_a-z0-9-]+(\.[_a-z0-9-]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/"
-          required>
-        </label>
+        <div class="list login-input">
+            <label class="item item-input" ng-class="{ 'has-error' : loginForm.email.$invalid && loginForm.email.$touched}">
+              <span class="input-label"><i class="ion-person"></i></span>
+              <input type="email"
+                placeholder="E-mail"
+                name="email"
+                ng-model="loginData.email"
+                ng-minlength="6"
+                ng-pattern="/^[_a-z0-9-]+(\.[_a-z0-9-]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,4})$/"
+                required>
+            </label>
 
-          <div class="form-errors" ng-messages="loginForm.email.$error" ng-if="loginForm.email.$touched">
-            <div class="form-error" ng-message="minlength required pattern">Please enter a valid email address.</div>
-          </div>
+            <div class="form-errors" ng-messages="loginForm.email.$error" ng-if="loginForm.email.$touched">
+              <div class="form-error" ng-message="minlength required pattern">Please enter a valid email address.</div>
+            </div>
 
-          <label class="item item-input" ng-class="{ 'has-error' : loginForm.password.$invalid && loginForm.password.$touched}">
-        <span class="input-label">Password</span>
-        <input type="password"
-          name="password"
-          ng-model="loginData.password"
-          ng-minlength="6"
-          required>
-        </label>
+            <label class="item item-input" ng-class="{ 'has-error' : loginForm.password.$invalid && loginForm.password.$touched}">
+          <span class="input-label"><i class="ion-lock-combination"></i></span>
+          <input type="password"
+            placeholder="Password"
+            name="password"
+            ng-model="loginData.password"
+            ng-minlength="6"
+            required>
+          </label>
         </div>
 
         <div class="form-errors" ng-messages="loginForm.password.$error" ng-if="loginForm.password.$touched">
