--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -16,6 +16,7 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,700,300);
+@import url(https://fonts.googleapis.com/css?family=Roboto:700,500);
 .form-errors {
   -webkit-transition: height 0.4s ease;
   transition: height 0.4s ease;
@@ -42,6 +43,9 @@ label.item.has-error {
     width: 100%; }
   .row {
     display: block !important; } }
+
+.menu-content {
+  box-shadow: -12px 0px 30px rgba(0, 0, 0, 0.2), 1px 0px 2px rgba(0, 0, 0, 0.2) !important; }
 
 .form-errors {
   height: auto; }
@@ -101,6 +105,99 @@ label.item.has-error {
       background-color: #2b137f; }
     .popup-container .popup .button:focus {
       background-color: #271274; }
+
+.tournament-feed .timer-card__header h3 {
+  color: white;
+  font-weight: 600;
+  opacity: 0.9; }
+
+.tournament-feed .feed-bg {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("/img/eudc2017-bg-blur.jpg");
+  background-position: center;
+  background-size: cover; }
+
+.tournament-feed .scroll-content {
+  background: -webkit-linear-gradient(bottom left, rgba(212, 11, 82, 0.5) 0%, #000b66 100%);
+  background: -o-linear-gradient(bottom left, rgba(212, 11, 82, 0.5) 0%, #000b66 100%);
+  background: linear-gradient(to top right, rgba(212, 11, 82, 0.5) 0%, #000b66 100%); }
+  .tournament-feed .scroll-content .list {
+    padding-top: 20px; }
+    .tournament-feed .scroll-content .list .feed-card {
+      margin-top: 0;
+      margin-right: 0;
+      padding-top: 0;
+      padding-bottom: 0;
+      border: none;
+      margin: 0;
+      position: relative; }
+      .tournament-feed .scroll-content .list .feed-card.time-alert {
+        background-color: rgba(0, 0, 0, 0.25) !important; }
+      .tournament-feed .scroll-content .list .feed-card .item-content {
+        margin-top: 5px; }
+        .tournament-feed .scroll-content .list .feed-card .item-content .item-avatar-left {
+          padding: 10px 0 15px 85px !important; }
+          .tournament-feed .scroll-content .list .feed-card .item-content .item-avatar-left .ion-icon {
+            position: absolute;
+            font-size: 50px;
+            color: white;
+            left: 24px;
+            top: 29px;
+            opacity: 0.7; }
+          .tournament-feed .scroll-content .list .feed-card .item-content .item-avatar-left h2 {
+            font-weight: 600; }
+
+/* Side Menu */
+.side-menu {
+  background-image: url("/img/eudc2017-menu-bg-blur1.jpg"); }
+  .side-menu .item-content.active {
+    background-color: rgba(102, 0, 102, 0.5) !important; }
+  .side-menu .menu-item {
+    background: transparent !important;
+    border: none; }
+    .side-menu .menu-item a {
+      position: relative;
+      font-size: 15px;
+      font-weight: 600;
+      padding-left: 75px;
+      background: none; }
+      .side-menu .menu-item a .menu-item__icon {
+        position: absolute;
+        font-size: 25px;
+        left: 30px;
+        top: 14px; }
+        .side-menu .menu-item a .menu-item__icon--map {
+          left: 32px; }
+        .side-menu .menu-item a .menu-item__icon--contacts {
+          left: 28px; }
+      .side-menu .menu-item a:hover, .side-menu .menu-item a:focus {
+        color: #e6e6e6;
+        opacity: 1; }
+  .side-menu .bar {
+    height: 125px;
+    background: none !important; }
+    .side-menu .bar img {
+      width: 125px;
+      height: 75px;
+      left: 25%;
+      top: 25px;
+      position: absolute; }
+  .side-menu .scroll-content {
+    top: 120px;
+    background: none; }
+
+/* Navigation Bar */
+.bar-stable {
+  background-color: rgba(35, 17, 48, 0.91) !important; }
+
+/* Pull Down To Refresh */
+.scroll-refresher .ionic-refresher-content {
+  color: rgba(255, 255, 255, 0.9) !important; }
+
+.spinner-ios, .spinner-ios-small {
+  stroke: rgba(255, 255, 255, 0.9) !important; }
 
 /*!
   Ionicons, v2.0.1
