--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,21 +14,21 @@
 
   <ion-side-menu side="left" class="side-menu">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Menu</h1>
+      <img src="img/eudc2017-logo.png" alt="EUDC2017 logo" />
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/app/tournamentFeed">
-          Tournament Feed
+        <ion-item class="menu-item" menu-close href="#/app/tournamentFeed">
+          <i class="menu-item__icon menu-item__icon--feed ion-ios-home-outline"></i>Tournament Feed
         </ion-item>
-        <ion-item menu-close href="#">
-          Map
+        <ion-item class="menu-item" menu-close href="#">
+          <i class="menu-item__icon menu-item__icon--map ion-ios-location-outline"></i>Map
         </ion-item>
-        <ion-item menu-close href="#">
-          Contacts
+        <ion-item class="menu-item" menu-close href="#">
+          <i class="menu-item__icon menu-item__icon--contacts ion-ios-people-outline"></i>Contacts
         </ion-item>
-        <ion-item menu-close href="#">
-          Calendar
+        <ion-item class="menu-item" menu-close href="#">
+          <i class="menu-item__icon menu-item__icon--calendar ion-ios-calendar-outline"></i>Calendar
         </ion-item>
       </ion-list>
     </ion-content>
