--- a/www/templates/card.html
+++ b/www/templates/card.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Card detail view">
+<ion-view view-title="Card detail view" class="card-detail-view">
     <ion-content>
         <div class="list card">
 
