--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -21,12 +21,15 @@
         <ion-item class="menu-item" menu-close href="#/app/tournamentFeed">
           <i class="menu-item__icon menu-item__icon--feed ion-ios-home-outline"></i>Tournament Feed
         </ion-item>
+        <div class="menu-item__divider"></div>
         <ion-item class="menu-item" menu-close href="#">
           <i class="menu-item__icon menu-item__icon--map ion-ios-location-outline"></i>Map
         </ion-item>
+        <div class="menu-item__divider"></div>
         <ion-item class="menu-item" menu-close href="#">
           <i class="menu-item__icon menu-item__icon--contacts ion-ios-people-outline"></i>Contacts
         </ion-item>
+        <div class="menu-item__divider"></div>
         <ion-item class="menu-item" menu-close href="#">
           <i class="menu-item__icon menu-item__icon--calendar ion-ios-calendar-outline"></i>Calendar
         </ion-item>
